# isp_monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/isp_monitor/: __init__.py  dashboard.py  dns_leak.py  main.py  monitor.py  utils.py  workers.py
tests/: __init__.py
